Make contract names configurable

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 DEPLOYER_ACCOUNT_PRIV_KEY="your private key used to deploy the contracts and also be the contract owner"
 
+# Specify the custom name for the OFT and OFTAdapter contracts
+# Default name is MyOFT and MyOFTAdapter
+MyOFT_CONTRACT_NAME=MyOFT
+MyOFTAdapter_CONTRACT_NAME=MyOFTAdapter
+
 # For deployment of OFTAdapter on source chain (Sepolia)
 rpcUrlOnSrcChain="https://eth-sepolia.public.blastapi.io"
 erc20TokenAddress="your existing erc20 token contract address"
