Add script for transferring contract ownership

--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,6 @@ AMOUNT=2
 # For sending the OFT-wrapped tokens back to the origin chain
 SENDER_BACK_ACCOUNT_PRIV_KEY="your private key used to send the OFT-wrapped tokens back to the origin chain"
 RECEIVER_BACK_ACCOUNT_ADDRESS=0x57A4bD139Fb673D364A6f12Df9177A3f686625F3
+
+# For transfer contract ownership
+newOwnerAddress=0x5e812d3128D8fD7CEac08CEca1Cd879E76a6E028
