--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "devDependencies": {
     "@ethersproject/bytes": "^5.7.0",
-    "@layerzerolabs/lz-v2-utilities": "^2.3.5",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-ignition": "^0.15.2",
@@ -34,8 +33,8 @@
     "@types/mocha": ">=9.1.0",
     "@types/node": "^20.12.7",
     "chai": "^4.2.0",
-    "hardhat": "^2.22.3",
     "ethers": "^6.12.1",
+    "hardhat": "^2.22.3",
     "hardhat-gas-reporter": "^1.0.8",
     "rimraf": "^5.0.5",
     "solidity-coverage": "^0.8.1",
@@ -44,9 +43,10 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@layerzerolabs/lz-evm-messagelib-v2": "^2.3.4",
-    "@layerzerolabs/lz-evm-oapp-v2": "^2.3.4",
-    "@layerzerolabs/lz-evm-protocol-v2": "^2.3.4",
+    "@layerzerolabs/lz-evm-messagelib-v2": "^2.3.15",
+    "@layerzerolabs/lz-evm-oapp-v2": "^2.3.15",
+    "@layerzerolabs/lz-evm-protocol-v2": "^2.3.15",
+    "@layerzerolabs/lz-v2-utilities": "2.3.15",
     "@layerzerolabs/scan-client": "^0.0.8",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
     "@openzeppelin/contracts": "^5.0.0",
