--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@ethersproject/abi": "^5.7.0",
     "@layerzerolabs/lz-evm-messagelib-v2": "^2.3.15",
     "@layerzerolabs/lz-evm-oapp-v2": "^2.3.15",
     "@layerzerolabs/lz-evm-protocol-v2": "^2.3.15",
