--- a/.env.example
+++ b/.env.example
@@ -1,42 +1,50 @@
+##### ShimmerEVM (source chain) <--wSMR--> IotaEVM (destination chain) #####
+
 DEPLOYER_ACCOUNT_PRIV_KEY="your private key used to deploy the contracts and also be the contract owner"
 
 # Specify the custom name for the OFT and OFTAdapter contracts
 # Default name is MyOFT and MyOFTAdapter
-MyOFT_CONTRACT_NAME=MyOFT
-MyOFTAdapter_CONTRACT_NAME=MyOFTAdapter
+OFT_CONTRACT_NAME=MyOFT
+OFTAdapter_CONTRACT_NAME=MyOFTAdapter
 
-# For deployment of OFTAdapter on source chain (Sepolia)
-rpcUrlOnSrcChain="https://eth-sepolia.public.blastapi.io"
-erc20TokenAddress="your existing erc20 token contract address"
-lzEndpointOnSrcChain=0x6edce65403992e310a62460808c4b910d972f10f
-lzEndpointIdOnSrcChain=40161
+# For deployment of OFTAdapter on source chain (ShimmerEVM)
+rpcUrlOnSrcChain="https://json-rpc.evm.shimmer.network"
+# wSMR
+erc20TokenAddress="0xBEb654A116aeEf764988DF0C6B4bf67CC869D01b"
+# https://docs.layerzero.network/v2/developers/evm/technical-reference/deployed-contracts
+lzEndpointOnSrcChain=0x148f693af10ddfaE81cDdb36F4c93B31A90076e1
+lzEndpointIdOnSrcChain=30230
 
-# For deployment of OFT on destination chain (BNB testnet)
-rpcUrlOnDestChain="https://bsc-testnet.public.blastapi.io"
-mintedTokenName=wSMR
-mintedTokenSymbol=wSMR
-lzEndpointOnDestChain=0x6edce65403992e310a62460808c4b910d972f10f
-lzEndpointIdOnDestChain=40102
+# For deployment of OFT on destination chain (IotaEVM)
+rpcUrlOnDestChain="https://json-rpc.evm.iotaledger.net"
+mintedTokenName=wSMRMock
+mintedTokenSymbol=wSMRMock
+# https://docs.layerzero.network/v2/developers/evm/technical-reference/deployed-contracts
+lzEndpointOnDestChain=0x1a44076050125825900e736c501f859c50fE728c
+lzEndpointIdOnDestChain=30284
 
-# For setting of the deployed OFTAdapter and OFT contracts 
-oftAdapterContractAddress=0x4daa81978576cB91a2e1919960e90e46c2a6D586
-oftContractAddress=0xCc337C2e69F4Eb8EaBcf632a1fC5B8F729dC47F1
+## For custom impl
+oftAdapterContractAddress=0xa9CdE55a02E359918350122C0ccc1a2BaF917C4d
+oftContractAddress=0xd478e7AbbA8f76F0473e882B97F4268B266bC9F3
 
 # For setEnforcedOptions
 # https://docs.layerzero.network/v2/developers/evm/gas-settings/options#lzreceive-option
 executorLzReceiveOptionMaxGas=200000
 
 # For sending the origin erc20 tokens
-# 0.001
-gasDropInWeiOnDestChain=1000000000000000
+# On some chains, if setting this gasDrop on destination, the cross-chain sending tx can get failed with error "execution reverted"
+gasDropInWeiOnDestChain=0
 SENDER_ACCOUNT_PRIV_KEY="your private key used to send the origin erc20 tokens"
 RECEIVER_ACCOUNT_ADDRESS=0x5e812d3128D8fD7CEac08CEca1Cd879E76a6E028
 # Token amount to send
-AMOUNT=2
+AMOUNT=0.01
 
 # For sending the OFT-wrapped tokens back to the origin chain
 SENDER_BACK_ACCOUNT_PRIV_KEY="your private key used to send the OFT-wrapped tokens back to the origin chain"
 RECEIVER_BACK_ACCOUNT_ADDRESS=0x57A4bD139Fb673D364A6f12Df9177A3f686625F3
 
 # For transfer contract ownership
-newOwnerAddress=0x5e812d3128D8fD7CEac08CEca1Cd879E76a6E028
+# multisig-1
+newOwnerAddressOFTAdapter=0x57A4bD139Fb673D364A6f12Df9177A3f686625F3
+# iota-2
+newOwnerAddressOFT=0x57A4bD139Fb673D364A6f12Df9177A3f686625F3
